# twin-style-bluecurve

./: CMakeL10n.txt  CMakeLists.txt  ConfigureChecks.cmake  Makefile.am  Makefile.in  config.h.cmake
Bluecurve/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  Makefile.in  bitmaps.h  bluecurve.desktop  bluecurveclient.cpp  bluecurveclient.h  bluecurveclient.moc
